--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.defer-datasource-initialization=true
 
 spring.jpa.show-sql = true
 spring.h2.console.enabled = true
+
+spring.batch.job.enabled = false
